--- a/index.html
+++ b/index.html
@@ -4,8 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .messages {
+            border: 1px solid black;
+            width: 300px;
+            height: 800px;
+            display:inline-block;
+            float: left;
+        }
+
+        .main {
+            border: 1px solid black;
+            height: 800px;
+            width: 800px;
+            display:inline-block;
+            align: center;
+        }
+
+        .profile {
+            border: 1px solid black;
+            width: 250px;
+            height: 800px;
+            display:inline-block;
+            float: right;
+        }
+
+    </style>
 </head>
 <body>
+    <div class="container" style="display:inline-block">
+        
+        <div class="messages">
+        </div>
+
+        <div class="main" align="center">
+        </div>
+
+        <div class="profile" align="center">
+        </div>
+
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
