--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
         .messages {
             border: 1px solid black;
             width: 300px;
-            height: 800px;
-            display:inline-block;
+            /* height: 800px; */
+             display:inline-block; 
             float: left;
         }
 
         .main {
             border: 1px solid black;
+            margin-top: 0px;
             height: 800px;
             width: 800px;
             display:inline-block;
@@ -36,14 +37,16 @@
         
         <div class="messages">
         </div>
-
+ 
         <div class="main" align="center">
         </div>
 
-        <div class="profile" align="center">
-        </div>
+        <!-- <div class="profile" align="center">
+        </div>  -->
 
     </div>
+    <script src="vender/faker.js-master/dist/faker.js"></script>
+    <script src="test.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
