--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>  -->
 
     </div>
+    <!-- <script src="train.js"></script> -->
     <script src="vender/faker.js-master/dist/faker.js"></script>
     <script src="test.js"></script>
     <script src="app.js"></script>
