--- a/index.html
+++ b/index.html
@@ -8,43 +8,41 @@
         .messages {
             border: 1px solid black;
             width: 400px;
-            /* height: 800px; */
-             display:inline-block; 
+            height: 800px; 
+            /* display:inline-block;  */
             float: left;
         }
 
-        .main {
+        /* .main {
             border: 1px solid black;
             margin-top: 0px;
             height: 800px;
             width: 800px;
             display:inline-block;
-            align: center;
-        }
+
+        } */
 
         .profile {
             border: 1px solid black;
-            width: 250px;
+            width: 450px;
             height: 800px;
-            display:inline-block;
+            /* display:inline-block; */
             float: right;
         }
 
     </style>
 </head>
-<body>
-    <div class="container" style="display:inline-block">
-        
-        <div class="messages">
-        </div>
- 
-        <div class="main" align="center">
-        </div>
-
-        <!-- <div class="profile" align="center">
-        </div>  -->
-
+<body>    
+    <div class="messages">
     </div>
+
+    <div class="main" align="center">
+    </div>
+
+    <div class="profile" align="center">
+    </div> 
+
+
     <!-- <script src="train.js"></script> -->
     <script src="vender/faker.js-master/dist/faker.js"></script>
     <script src="test.js"></script>
