--- a/index.html
+++ b/index.html
@@ -9,24 +9,22 @@
             border: 1px solid black;
             width: 400px;
             height: 800px; 
-            /* display:inline-block;  */
             float: left;
         }
 
-        /* .main {
+         .main {
             border: 1px solid black;
             margin-top: 0px;
             height: 800px;
-            width: 800px;
+            width: 600px;
             display:inline-block;
 
-        } */
+        } 
 
         .profile {
             border: 1px solid black;
             width: 450px;
             height: 800px;
-            /* display:inline-block; */
             float: right;
         }
 
